<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitnessTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splashtext">Fitness Tracker</string>
    <string name="title_activity_social_login">SocialLoginActivity</string>
    <string name="login">Login</string>
    <string name="app_id">1481127025437266</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
    <string name="title_activity_bmi_calculator">BmiCalculator</string>
    <string name="title_activity_bmi_result">BMI Result</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_calorie">Calorie Calculator</string>
    <string name="activityLevel">Activity Level</string>

    <string-array name="calorie_arrays">
        <item>Inactive</item>
        <item>Somewhat Active</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>

    <string name="title_activity_calorie_result">CalorieResult</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_home">Home</string>
    <string name="action_bmi">BMI</string>
    <string name="action_calorie">Calorie</string>
    <string name="action_tips">Tips</string>
    <string name="action_reports">Reports</string>
    <string name="title_activity_result">Result</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_section_text">Reports</string>

</resources>
