<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asha.fitnesstracker.app.activities.BaseActivity" >

    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_bmi"
        android:title="@string/action_bmi"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_calorie"
        android:title="@string/action_calorie"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_tips"
        android:title="@string/action_tips"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_reports"
        android:title="@string/action_reports"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
